# SUMO-exercises

basics/: README.md
basics/cartpole/: README.md  cart_pole_agent.py  cart_pole_agent_dqn.py  main.py  main_dqn.py  pyproject.toml
basics/lunar-lander-ppo/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
basics/lunar-lander-ppo/configs/: a2c.yaml  a2c_entropy05.yaml  a2c_long.yaml  gae.yaml  gae_long.yaml  reinforce.yaml  reinforce_baseline.yaml  reinforce_baseline_long.yaml  reinforce_long.yaml
basics/lunar-lander-ppo/rl/agents/: __init__.py  a2c.py  base.py  gae.py  reinforce.py  reinforce_baseline.py
basics/lunar-lander-ppo/rl/common/: buffers.py  config.py  envs.py  eval.py  logger.py  nets.py  plot.py  seeding.py  utils.py
rl-agent-comparison-louw/: .CLAUDE.md.swp  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
rl-agent-comparison-louw/configs/: ppo_50k.yaml  single_int_dqn.yaml  single_int_ppo.yaml  smoke_dqn.yaml  smoke_ppo.yaml
rl-agent-comparison-louw/scenarios/single_int/: net.net.xml  routes.rou.xml  sim.sumocfg
rl-agent-comparison-louw/scenarios/single_int/plain/: edges.edg.xml  nodes.nod.xml
rl-agent-comparison-louw/scripts/: build_single_int_network.sh  rollout_env.py  validate_green_action_space.py
rl-agent-comparison-louw/src/: __init__.py
rl-agent-comparison-louw/src/baselines/: __init__.py  agents.py
rl-agent-comparison-louw/src/envs/: __init__.py  sumo_utils.py  tsc_env.py
rl-agent-comparison-louw/src/training/: __init__.py  compare_baselines.py  eval.py  metrics.py  train_dqn.py  train_ppo.py  visualize.py
(+27 files in other folders)
